# perceptron

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py
data/: output.json
src/: init.rs  lib.rs  main.rs  network.rs
writeup/: homework.tex
